--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>Working with JS, Node and Express</h1>
+    <h1>Working with JS, Node and Express and so on</h1>
   </body>
 </html>
