--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Working with JS, Node and Express and so on</h1>
+    <script src="bundle.js"></script>
   </body>
 </html>
