--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>Working with JS, Node and Express and so on</h1>
+    <h1>Working with JS, Node and Express and so o</h1>
     <script src="bundle.js"></script>
   </body>
 </html>
