--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>Working with JS, Node and Express and so on</h1>
+    <h1>Users</h1>
+    <table>
+      <thead>
+        <th>&nbsp;</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="users">
+  
+      </tbody>
+    </table>
     <script src="bundle.js"></script>
   </body>
 </html>
